# wgsl-reflect

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.wgsl
.github/: check_format.sh
.github/workflows/: ci.yml
cppts/: CMakeLists.txt
cppts/include/cppts/: node.hpp  parser.hpp  query.hpp  tree.hpp
cppts/src/cppts/: node.cpp  parser.cpp  query.cpp  tree.cpp
include/cppts/: node.hpp  parser.hpp  query.hpp  tree.hpp
src/: main.cpp
src/cppts/: node.cpp  query.cpp
tests/: CMakeLists.txt  reference.wgsl  simple.wgsl  test_json.cpp  test_parser.cpp  test_reflect.cpp  test_reflect_parse.cpp  util.hpp
wgsl_reflect/: CMakeLists.txt
wgsl_reflect/include/wgsl_reflect/: reflect.hpp
wgsl_reflect/src/: main.cpp  reflect.cpp
